# geometry-of-efficient-markets

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TO_DO.md
.claude/: settings.local.json
book/: ADDENDUM.md  ANECDOTES.md  EXPERIMENTS.md  MASTER_PLAN.md  SESSION_3_PLAN.md  SESSION_4_REVIEW.md  SO_WHATS.md
code/: README.md  requirements.txt
code/cfd/: IMPLEMENTATION_PLAN.md
code/core/: curvature.py  fisher_rao.py  kelly.py
code/cpp/: CMakeLists.txt  README.md
code/cpp/include/interfaces/: IntegrationMethodInterface.hpp  SimplexIntegralInterface.hpp
code/cpp/include/math/: SimplexMath.hpp
code/cpp/src/: main.cpp
code/cpp/src/math/: SimplexMath.cpp
code/cpp/src/portfolio/: EGIntegrator.cpp  LaplaceIntegrator.cpp
code/experiments/: bootstrap.py  experiment_01_sharpe_curvature.py  run_all_tests.py  test_01R_sharpe_curvature_bootstrap.py  test_01_sharpe_curvature.py  test_02_manifold_dimension.py  test_03_mup_vs_cover.py  test_04_spectral_gap.py  test_04_spectral_gap_v2.py  test_05_cheeger_crisis.py  test_06_three_market_types.py  test_08R_jacobi_nonparametric.py  test_15R_lz_symbolic.py  test_15V_lz_voronoi.py  test_20_palindrome_gbm_rejection.py  test_21_fps_option_pricing.py  test_22_pei.py  test_22_pei_graphics.py  test_23_fps_vs_gbm.py  test_24_option_pricing_charts.py  test_N12_N13_micro_credit.py  test_N14_N15_N16_N17.py  test_N1_yield_curve_eigenmodes.py  test_N3_bidask_fisher_rao.py  test_N4_fx_triangular_arb.py  test_N9_N10_N11_high_priority.py
code/shapley/: kelly_shapley.py
code/tools/: md2latex.py
code/visualisation/: README.md  fx_manifold_interactive.py  fx_manifold_plotly.py  market_manifolds.py  simplex_explorer.py
data/: ADVANCED_EXPERIMENTS.md  EXPERIMENTAL_PROBLEMS.md  EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_V2.md  README.md  download_all.py  download_databento.py  download_databento_batch1.py  download_itch.py  download_massive.py  process_all.py
navigation/: ABSTRACT.md  CONJECTURES.md  EXECUTIVE_SUMMARY.md  OPEN_PROBLEMS.md  SERIES_PLAN.md  WHATS_NEW.md
papers/: ART_MARKET.md  BETTER_INDEX_FUND.md  BLOODSTOCK_MARKETS.md  BRAIDS.md  CFD_METHODS.md  CHAOS_TAKENS.md  CLASSIFICATION.md  COMPLEXITY.md  CONFIDENCE.md  CONVERGENCE.md  CONVEXIFICATION.md  CONVEX_INFORMATION.md  CREDIT_RISK.md  DERIVATIVES_CONVEXITY.md  DUAL_TOWER.md  EMU_CASE_STUDY.md  FIBER_BUNDLES.md  FILTRATIONS.md  FISHERIES_MARKETS.md  FIXED_INCOME_YIELD_CURVES.md  FK_SIMPLEX.md  FOKKER_PLANCK_CFD.md  FOREIGN_EXCHANGE.md  FPS_VS_GBM_EMPIRICAL.md  GEOSPATIAL_CONTAGION.md  GRASSBERGER_PERCOLATION_GENERATING.md  HAMILTONIAN_TAILS_COMPLETENESS.md  HOPF_FIBRATION_MIXING.md  HORSE_RACING_SPORTS_BETTING_GAMBLING.md  HYPERCUBE_SHAPLEY.md  IMPOSSIBILITY_OF_CENTRAL_ALLOCATION.md  INCOMPLETENESS.md  INFLATION_CAPITAL_FLOWS.md  INFORMATION_INTELLIGENCE_KNOWING.md  INFORMATION_THEORY.md  INTERMARKET_GEOMETRY.md  KNOT_THEORY.md  LAPLACE.md  LIGHTCONE_OF_PRICE.md  LLM_MANIFOLD.md  (+34 more)
tools/: MATH_RENDERING_CONVENTION.md  fix_ampersand_math.py  fix_blockquote_math.py  fix_display_math.py  fix_markdown.py  fix_math_braces.py  fix_risky_inline_math.py
